# libcrypto

./: CMakeLists.txt  Makefile  README.md  compile_flags.txt
.github/workflows/: test.yml
cmake/: build_crypto.cmake  build_tests.cmake  crypto.pc.in  install_crypto.cmake  uninstall_crypto.cmake
include/libcrypto/symmetric/: chacha20.h
src/symmetric/: chacha20.c
tests/: CMakeLists.txt  Makefile  compile_flags.txt
tests/chacha20/: test_chacha20  test_chacha20.c
tests/utils/: test_utils.c  test_utils.h
